demux: ts: check pcr offset with value prior matching sync code

otherwise the last value is always overwritten with a more recent one
and triggers the dts < pcr case

ref #25034