modules/demux/mpeg/ts_pes.h
@@ -26,14 +26,15 @@ typedef struct
 {
     vlc_object_t *p_obj;
     void *priv;
-    void(*pf_parse)(vlc_object_t *, void *, block_t *);
+    void(*pf_parse)(vlc_object_t *, void *, block_t *, stime_t);
 } ts_pes_parse_callback;
 
 bool ts_pes_Drain( ts_pes_parse_callback *cb, ts_stream_t *p_pes );
 
 bool ts_pes_Gather( ts_pes_parse_callback *cb,
                     ts_stream_t *p_pes, block_t *p_pkt,
-                    bool b_unit_start, bool b_valid_scrambling );
+                    bool b_unit_start, bool b_valid_scrambling,
+                    stime_t i_append_pcr );
 
 
 #endif
